--- a/XD.Job.Spider/index.html
+++ b/XD.Job.Spider/index.html
@@ -115,8 +115,8 @@
     <!--<input type="hidden" id="current_city" />-->
     <div class="container">
         <div class="jumbotron">
-            <h1>Hello,各位看官</h1>
-            <p>爬取拉勾求职信息</p>
+            <h1>Hello,Everyone</h1>
+            <p>this is a crawler,so easy,if interested,please go to https://github.com/hxd1230/XD.Job.Spider.git </p>
             <p class="text-right">Author:贺晓冬 2017/07/15 pm</p>
             <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>-->
         </div>
